# evince

./: configure.ac
backend/pdf/: ev-poppler.cc
cut-n-paste/toolbar-editor/: Makefile.am
data/: Makefile.am  evince-hildon-ui.xml  evince-ui.xml  evince.service.in  gtkrc-hildon
libdocument/: ev-annotation.c  ev-annotation.h  ev-document-annotations.c  ev-document-annotations.h
libmisc/: ev-page-action-widget.c
libview/: ev-document-model.c  ev-loading-window.c  ev-view-presentation.c  ev-view.c  ev-view.h
pdf/fofi/: .cvsignore
pdf/xpdf/: Annot.h  FontFile.cc  Gfx.h  GfxState.cc  Makefile.am  OutputDev.h  PDFDoc.cc  PDFDoc.h  Page.cc  Page.h  TextOutputDev.cc  TextOutputDev.h  Thumb.cc  Thumb.h  XOutputDev.h  cursor-hand-closed.xpm  cursor-hand-open.xpm  gpdf-filesel-dialog.glade  gpdf-findtext-dialog.glade  gpdf-printing-dialog.glade  prefs-strings.h  tool-control.c  tool-control.h
po/: POTFILES.in
shell/: Makefile.am  eggfindbar.c  ev-application.c  ev-application.h  ev-properties-dialog.c  ev-properties-fonts.c  ev-toolbar.c  ev-utils.c  ev-window.c  ev-window.h  evince-appmenu.ui  evince-ui.xml  evince.gresource.xml  main.c  traditional-menus.ui
